syntax = "proto3";
package chat;

service Chat {
  rpc GetMessages (GetMessagesRequest) returns (stream ServerMessage);
  rpc SendMessage (ClientMessage) returns (SendMessageResponse);
}

message ClientMessage {
  string message = 1;
}

message ServerMessage {
  string username = 1;
  string message = 2;
  int64 created_at = 3;
}

message GetMessagesRequest {
  string username = 1;
}

message SendMessageResponse {}
